# pyCluster

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  dxcluster-compat-scout-2026-03-01.md  pyproject.toml
.claude/: settings.local.json
config/: pycluster.local.toml.example  pycluster.toml  strings.toml
deploy/: doctor.sh  install.sh  lib.sh  migrate.sh  repair.sh  setup-nginx.sh  uninstall.sh  upgrade.sh
docs/: administration-manual.md  architecture.md  commands-inventory.txt  compatibility-matrix.md  configuration.md  dxspider-command-catalog.md  dxspider-parity-matrix.md  feature-highlights.md  installation.md  legacy-dxspider-node-login-notes.md  migration.md  node-linking.md  operations.md  public-web.md  pycluster-project-history.md  pycluster-roadmap.md  replay-report.json  security.md  sysop-web.md  telnet-command-reference.md  telnet-commands.md  user-manual.md
scripts/: bootstrap_sysop.py  build_fixtures.py  cleanup_retention.py  collect_remote_samples.sh  generate_dxspider_parity.py  generate_matrix.py  migrate_dxspider.py  run_upgrade_request.py  sync_dxspider_live_data.sh  update_cty.py  upgrade_1_0_1.py  upgrade_1_0_6.py
tests/: test_app_ingest.py  test_cleanup_retention.py  test_command_catalog_coverage.py  test_config.py  test_deploy_fail2ban.py  test_dxspider_fixtures.py  test_dxspider_migrate.py  test_dxspider_userfile.py  test_importer.py  test_issue_review.py  test_models.py  test_node_link.py  test_node_link_policy.py  test_peer_profiles.py  test_protocol.py  test_protocol_roundtrip.py  test_public_web.py  test_replay.py  test_shdx.py  (+8 more)
(+73 files in other folders)
