[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pycluster"
version = "1.0.0"
description = "Modern, lightweight DXCluster software with web UI, administration, and DXSpider-compatible behavior"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
tnc = ["pyserial>=3.5"]

[project.scripts]
pycluster = "pycluster.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
